...
  | 'french'
  | 'ingles';

const data = {
  spanish: {
    image: spain,
    title: 'Spanish',
    metaUrl: 'http://syntaxblitz.net/static/lt/spanish-meta.json',
    // this will get moved once we're fetching meta from the server
    meta: {
      version: 0,
      lessons: [
        {
          url: 'http://syntaxblitz.net/static/lt/spanish1.mp3',
          id: 'spanish1',
          duration: 334.132,
          title: 'Lesson 1',
        },
        {
          url: 'http://syntaxblitz.net/static/lt/spanish2.mp3',
          id: 'spanish2',
          title: 'Lesson 2',
          duration: 7 * 60 + 58.77,
...
