...
      text: 'white',
      backgroundAccent: '#004ba0',
    },
  },
  ingles: {
    image: london,
    title: 'Inglés',
    lessons: 40,
    uiColors: {
      background: '#0277bd',
      text: 'white',
      backgroundAccent: '#004c8c',
    },
...
