...
                navigate('Language Home', {course: "music"})
              }
            />

            <View style={styles.sectionHeader}>
              <Text style={styles.sectionHeaderText}>
                Language courses
              </Text>
            </View>
            <LanguageButton
              course="spanish"
              onPress={() =>
                navigate('Language Home', {course: "spanish"})
...
