...
      backgroundAccent: "#098abc",
    },
  },
  ingles: {
    image: inglesCover,
    imageWithText: inglesCoverWithText,
    shortTitle: "Inglés",
    fullTitle: "Introducción a Inglés",
    courseType: "intro",
    sourceLanguage: SourceLanguage.SPANISH,
    fallbackLessonCount: "40",
    uiColors: {
      background: "#7186d0",
...
    },
  },
  ingles_completo: {
    image: inglesCover,
    imageWithText: inglesCoverWithText,
    shortTitle: "Inglés",
    fullTitle: "Inglés Completo",
    courseType: "complete",
    sourceLanguage: SourceLanguage.SPANISH,
    fallbackLessonCount: "51",
    uiColors: {
      background: "#7186d0",
      softBackground: "#d5daee",
...
