appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "Inglés"
    direction: DOWN
- assertVisible: "Inglés completo, [0-9]+ lessons"
- tapOn: "Inglés"
- assertVisible: "Track 0"
- assertVisible: "¡Nuevo curso!"
- assertVisible: "¡'Inglés Completo' ya se está lanzando!"
- assertVisible: "Empieza desde el principio de este nuevo curso."
- assertNotVisible: "Abrir curso anterior"
- assertNotVisible: "Introducción a Inglés — curso anterior"
- takeScreenshot: course-ingles-complete
- tapOn: "All Lessons"
- scrollUntilVisible:
    element:
      text: "El curso antiguo, «Introducción al inglés», se encuentra en el canal de YouTube de Language Transfer."
    direction: DOWN
    timeout: 60000
    visibilityPercentage: 100
- assertVisible: "El curso antiguo, «Introducción al inglés», se encuentra en el canal de YouTube de Language Transfer."
- takeScreenshot: course-ingles-lessons-footer
